MET-2877 Update deprecated methods